# hpr-skygate

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  PLAN.md  README.md  build.rs  dashboard.html
docs/: ais-demod-plan.md  report-2026-06-28.md
ref/: hpradar-feeder-management-spec.md  rust-sdr-demod.md
src/: alerts.rs  api.rs  beast.rs  client.rs  compact_ingest.rs  config.rs  enrichment.rs  feeder.rs  ingest.rs  main.rs  receiver.rs  reduce.rs  sbs.rs  wire.rs  writer.rs  ws.rs
src/ais/: decode.rs  dedup.rs  mod.rs  vessel.rs
src/decode/: aircraft.rs  cpr.rs  crc.rs  mod.rs  mode_s.rs  output.rs  receiver_map.rs
src/sdr/: ais_demod.rs  demod1090.rs  mag.rs  mod.rs  preamble.rs  rtlsdr.rs  sdr_reader.rs  slicer.rs
