[package]
name = "hpr-skygate"
version = "0.4.0"
edition = "2021"
description = "High-performance ADS-B beast ingest, decode, and fan-out engine"
license = "MIT"

[dependencies]
mio = { version = "1", features = ["net", "os-poll"] }
bytes = "1"
dashmap = "6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
